# uniffi-rs

./: Cargo.toml
fixtures/optional-bindings/: Cargo.toml  README.md  build.rs
fixtures/optional-bindings/src/: lib.rs
fixtures/optional-bindings/tests/: test_generated_bindings.rs
fixtures/optional-bindings/tests/bindings/: test.kts  test.py  test.swift
uniffi_testing/src/: lib.rs
